tests/samples/positive/pattern_matching/const_pattern.ax
module const_pattern;

const OK: i32 = 0;
const YES: bool = true;

fn score(value: i32) -> i32 {
    return match value {
        const OK => 10,
        _ => 20,
    };
}

fn flag(value: bool) -> i32 {
    return match value {
        const YES => 1,
        _ => 0,
    };
}

fn main() -> i32 {
    if score(0) != 10 {
        return 1;
    }
    if score(1) != 20 {
        return 2;
    }
    if flag(true) != 1 {
        return 3;
    }
    if flag(false) != 0 {
        return 4;
    }
    return 0;
}
